<resources>
    <string name="app_name">S.H.I.E.L.D</string>
    <string name="cover_description">Cover</string>
    <string name="ver_detalhes_string">See Details</string>
    <string name="mais_detalhes_na_web">More Details</string>
    <string name="_00_00_00_s_20_20">00/00/00 ás 20:20</string>
    <string name="magazine_name">Magazine Name</string>
    <string name="magazine">Magazine</string>
    <string name="_26_pages">26 Pages</string>
    <string name="searsh_magazine">Search Magazine</string>
    <string name="hellow">Hellow??</string>
    <string name="comix_title">Comix</string>
    <string name="like_title">Favorites</string>
    <string name="msg_liked">Add Favorites</string>
    <string name="msg_desliked">Removed Favorites</string>
    <string name="end_list">End List</string>
    <string name="search_something">Enter Something For Search</string>
    <string name="text_search_magazine">search for a magazine</string>
    <string name="msg_no_connection">No Conection</string>
    <string name="msg_error_magazine_data">Error on Load Magazine Data</string>
    <string name="label_loading">Loading</string>
</resources>
