<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:id="@+id/relativeLayout"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:elevation="8dp"
        android:orientation="horizontal">

        <LinearLayout
            android:id="@+id/ll_dialog_searchbar"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">


            <ImageView
                android:id="@+id/img_dialog_fullscreen_close"
                android:layout_width="0dp"
                android:layout_height="25dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_close_black_24dp"
                android:contentDescription="@string/cover_description" />

            <EditText
                android:id="@+id/et_busca"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_alignParentStart="true"
                android:layout_weight="6"
                android:backgroundTint="@color/transparent"
                android:gravity="left|center"
                android:hint="@string/searsh_magazine"
                android:imeOptions="actionDone"
                android:inputType="textCapSentences"
                android:textSize="14sp"
                android:textStyle="bold" />

            <ImageView
                android:id="@+id/img_dialog_fullscreen_p_voz"
                android:layout_width="0dp"
                android:layout_height="29dp"
                android:layout_gravity="center"
                android:layout_marginRight="5dp"
                android:layout_weight="1"
                android:foreground="?android:attr/selectableItemBackgroundBorderless"
                android:src="@drawable/ic_mic_black_24dp" />

        </LinearLayout>

        <ImageView
            android:id="@+id/img_dialog_fullscreen_menu"
            android:layout_marginRight="-13dp"
            android:layout_width="wrap_content"
            android:layout_height="29dp"
            android:layout_alignEnd="@+id/ll_dialog_searchbar"
            android:layout_centerVertical="true"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:clickable="true"
            android:foreground="?android:attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_more_vert_black_24dp" />

    </RelativeLayout>


    <LinearLayout
        android:id="@+id/ll_dialog_buscas"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout">


        <ListView
            android:divider="@color/transparent"
            android:id="@+id/lv_dialog_buscas"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/activity_background">

        </ListView>

    </LinearLayout>


    <RelativeLayout
        android:id="@+id/rl_dialog_busca"
        android:layout_marginTop="-5dp"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/relativeLayout"
        android:background="@color/activity_background"
        android:orientation="vertical"
        android:visibility="gone">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/hellow" />

    </RelativeLayout>


</RelativeLayout>